# JniExample

./: README.md
JniProject/src/: Main.h  Main.java  MainP.java
JniProjectC/: CMakeLists.txt  library.c  main.bc  main.c
